apps/base/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bacherik-site
  namespace: homepage
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bacherik-site
  template:
    metadata:
      labels:
        app: bacherik-site
    spec:
      containers:
      - name: frontend
        image: ghcr.io/bacherik/bacherik.de:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
