apps/base/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bacherik-site
  namespace: homepage
spec:
  type: ClusterIP
  selector:
    app: bacherik-site
  ports:
  - port: 80
    targetPort: 80
